--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,18 +1,30 @@
 Package: clockPlot
-Title: What the Package Does (One Line, Title Case)
+Title: clockPlot
 Version: 0.0.0.9000
 Authors@R: 
-    person(given = "First",
-           family = "Last",
+    person(given = "Zac",
+           family = "Warham",
            role = c("aut", "cre"),
-           email = "first.last@example.com",
-           comment = c(ORCID = "YOUR-ORCID-ID"))
-Description: What the package does (one paragraph).
-License: `use_mit_license()`, `use_gpl3_license()` or friends to pick a
-    license
+           email = "z.warham@oceans.ubc.ca",
+           comment = c(ORCID = "https://orcid.org/0000-0003-3538-5169"))
+Description: Uses ggplot to create a clock face graphic for visual purposes. This could then be saved and used as a visual aid in a document or in print.
+License: file LICENSE
 Encoding: UTF-8
 LazyData: true
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.2
 URL: https://github.com/zwarham/clockPlot
 BugReports: https://github.com/zwarham/clockPlot/issues
+Imports:
+  tidyverse,
+  lubridate,
+  magrittr,
+  dplyr,
+  purrr,
+  stringr,
+  tibble,
+  ggplot2
+Suggests: 
+    proto,
+    testthat (>= 3.0.0)
+Config/testthat/edition: 3
